# ctrlgen-rs

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
ctrlgen/: Cargo.toml  README.md
ctrlgen-derive/: Cargo.toml
ctrlgen-derive/src/: generate.rs  lib.rs  parse_args.rs  parse_input.rs
ctrlgen-impl/: Cargo.toml
ctrlgen-impl/src/: generate.rs  lib.rs  parse_args.rs  parse_input.rs
ctrlgen-impl/tests/: docs.rs
ctrlgen-impl/tests/snapshots/: docs__preserve_documentation_proxy.snap
ctrlgen/src/: lib.rs  promise.rs  returnval.rs
ctrlgen/src/support/: flume.rs  mod.rs  promise.rs  returnval.rs  tokio.rs
ctrlgen/tests/: async.rs  context.rs  enum_attr.rs  generics.rs  mixed.rs  mixed_manual.rs  proxy_impl.rs  proxy_trait.rs
