[workspace]
members = [
  "ctrlgen",
  "ctrlgen-impl",
  "ctrlgen-derive"
]

[workspace.package]
license = "MIT"
description = "Generate enums for message-passing services"
author = "Tobias Pisani <topisani@hamsterpoison.com>"

[workspace.dependencies]
ctrlgen-impl = { version = "*", path = "ctrlgen-impl"}
ctrlgen-derive = { version = "*", path = "ctrlgen-derive"}

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
