[workspace]
members = [
  "ctrlgen",
  "ctrlgen-impl",
  "ctrlgen-derive"
]
resolver = "2"

[workspace.package]
license = "MIT"
description = "Generate enums for message-passing services"
author = "Tobias Pisani <mail@topisani.dev>"
repository = "https://github.com/bitfieldaudio/ctrlgen-rs"

[workspace.dependencies]
ctrlgen-impl = { version = "0.3.3", path = "ctrlgen-impl"}
ctrlgen-derive = { version = "0.3.3", path = "ctrlgen-derive"}

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
