[package]
name = "ctrlgen-impl"
version= "0.3.4"
license.workspace = true
description.workspace = true
author.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
convert_case = "0.5.0"
#darling = "0.13.1"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = {version="1.0.86", features=["full", "extra-traits"]}

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml"] }
