[package]
name = "ctrlgen"
version= "0.3.5"
license.workspace = true
description.workspace = true
author.workspace = true
repository.workspace = true
edition = "2021"
include = ["src", "Cargo.toml", "tests", "README.md"]

[dependencies]
tokio = { version = "1.17", features=["sync", "rt", "macros"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
ctrlgen-derive.workspace = true
flume = { version = "0.10.13", optional = true }
futures-lite = { version = "1.12.0", optional = true }

[features]

tokio = ["dep:tokio", "dep:futures-lite"]
alloc = []
support = []
default = ["std", "support"]
std = ["alloc"]

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml"] }
